log/2021-05-09T00:24:19+0800.log
Autotest: Begin at 2021年 05月 09日 星期日 00:24:19 CST
[32m[ found your pageReplace.cpp ][0m
pageReplace.cpp: In function 'void pageReplace(long int*, long int)':
pageReplace.cpp:85:9: error: expected ';' before '}' token
         }
         ^
make: *** [main] Error 1
[31m[01m[ compile error ][0m
[33m[01m[ You got 0 (of 100) this time. 2021年 05月 09日 星期日 00:24:22 CST ][0m
